Tue Feb 16 10:54:26 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Updater/Receiver/Updater_Receiver.idl:
        * connectors/dds4ccm/tests/Updater/Receiver/Updater_Receiver_exec.h:
        * connectors/dds4ccm/tests/Updater/Receiver/Updater_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Updater/descriptors/Plan.cdp:
          Added data listener and test thread switch for this
          data listener.

Tue Feb 16 09:45:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.cpp:
          Improved code for thread switch.

        * connectors/dds4ccm/tests/SLOneByOne/Receiver/SL_OneByOne_Receiver_exec.h:
        * connectors/dds4ccm/tests/SLOneByOne/Receiver/SL_OneByOne_Receiver_exec.cpp:
          Removed reader implementation since it's unnecessary. Also
          optimized logging.

        * connectors/dds4ccm/tests/SLOneByOne/Sender/SL_OneByOne_Sender_exec.cpp:
          Improved logging.

Tue Feb 16 08:23:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Config_Handlers/Config_Handlers.mpc
        * DAnCE/Config_Handlers/DynAny_Handler/DynAny_Handler.mpc
        * DAnCE/Config_Handlers/Package_Handlers/Package_Handlers.mpc
        * DAnCE/Deployment/DAnCE_Core.mpc
        * DAnCE/DomainApplication/DomainApplication.mpc
        * DAnCE/DomainApplicationManager/DomainApplicationManager.mpc
        * DAnCE/ExecutionManager/ExecutionManager.mpc
        * DAnCE/ExecutionManager/ExecutionManager_Impl.h
        * DAnCE/MPC/config/ciao_config_handlers.mpb
        * DAnCE/MPC/config/ciao_config_handlers_base.mpb
        * DAnCE/MPC/config/ciao_nodeapplication.mpb
        * DAnCE/MPC/config/ciao_nodeapplicationmanager.mpb
        * DAnCE/MPC/config/ciao_plan_generator.mpb
        * DAnCE/MPC/config/ciao_targetmanager_stub.mpb
        * DAnCE/MPC/config/ciao_targetmanager_svnt.mpb
        * DAnCE/MPC/config/dance_applicationmanager_skel.mpb