@@ -1,3 +1,9 @@
+Tue Feb 16 12:32:37 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender_exec.cpp:
+        * connectors/dds4ccm/tests/InstanceHandle/Sender/Writer_Sender_exec.cpp:
+          Resolved shutdown errors.
+
 Tue Feb 16 10:54:26 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/Updater/Receiver/Updater_Receiver.idl:
